5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1672_1952.log
== TEST (2019-04-28 14:24:28) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	a=x-(x*0.08)
elif(x>1659.39 and x<=2765.66):
	a=x-(x*0.09)
elif(x>2765.67 and x<=5531.31):
	a=x-(x*0.11)
else:
	a=x-608.44
#Salário base - aliquota
if(a<=1903.98):
	b=a
	print("Salario liquido= R$",(round(b,2)))
elif(a>1903.98 and a<=2826.65):
	b=a-(a*0.075)
	print("Salario liquido= R$",(round(b,2)))
elif(a>2826.66 and a<=3751.05):
	b=a-(a*0.15)
	print("Salario liquido= R$",(round(b,2)))
elif(a>3751.06 and a<=4662.68):
	b=a-(a*0.225)
	print("Salario liquido= R$",(round(b,2)))
else:
	b=a-(a*0.275)
print("Salario liquido= R$",(round(b,2)))
-- OUTPUT:
Salario liquido= R$ 1135.8
Salario liquido= R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:25:59) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	a=x-(x*0.08)
elif(x>1659.39 and x<=2765.66):
	a=x-(x*0.09)
elif(x>2765.67 and x<=5531.31):
	a=x-(x*0.11)
else:
	a=x-608.44
#Salário base - aliquota
if(a<=1903.98):
	b=a
elif(a>1903.98 and a<=2826.65):
	b=a-(a*0.075)
elif(a>2826.66 and a<=3751.05):
	b=a-(a*0.15)
elif(a>3751.06 and a<=4662.68):
	b=a-(a*0.225)
else:
	b=a-(a*0.275)
print("Salario liquido= R$",(round(b,2)))
-- OUTPUT:
Salario liquido= R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 14:26:06) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	a=x-(x*0.08)
elif(x>1659.39 and x<=2765.66):
	a=x-(x*0.09)
elif(x>2765.67 and x<=5531.31):
	a=x-(x*0.11)
else:
	a=x-608.44
#Salário base - aliquota
if(a<=1903.98):
	b=a
elif(a>1903.98 and a<=2826.65):
	b=a-(a*0.075)
elif(a>2826.66 and a<=3751.05):
	b=a-(a*0.15)
elif(a>3751.06 and a<=4662.68):
	b=a-(a*0.225)
else:
	b=a-(a*0.275)
print("Salario liquido= R$",(round(b,2)))
-- EXECUTION TIME:
0.164252
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido= R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido= R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido= R$ 3571.76
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:26:10) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	a=x-(x*0.08)
elif(x>1659.39 and x<=2765.66):
	a=x-(x*0.09)
elif(x>2765.67 and x<=5531.31):
	a=x-(x*0.11)
else:
	a=x-608.44
#Salário base - aliquota
if(a<=1903.98):
	b=a
elif(a>1903.98 and a<=2826.65):
	b=a-(a*0.075)
elif(a>2826.66 and a<=3751.05):
	b=a-(a*0.15)
elif(a>3751.06 and a<=4662.68):
	b=a-(a*0.225)
else:
	b=a-(a*0.275)
print("Salario liquido= R$",(round(b,2)))
-- OUTPUT:
Salario liquido= R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:26:18) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	a=x-(x*0.08)
elif(x>1659.39 and x<=2765.66):
	a=x-(x*0.09)
elif(x>2765.67 and x<=5531.31):
	a=x-(x*0.11)
else:
	a=x-608.44
#Salário base - aliquota
if(a<=1903.98):
	b=a
elif(a>1903.98 and a<=2826.65):
	b=a-(a*0.075)
elif(a>2826.66 and a<=3751.05):
	b=a-(a*0.15)
elif(a>3751.06 and a<=4662.68):
	b=a-(a*0.225)
else:
	b=a-(a*0.275)
print("Salario liquido= R$",(round(b,2)))
-- OUTPUT:
Salario liquido= R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:28:04) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	a=x-(x*0.08)
elif(x>1659.39 and x<=2765.66):
	a=x-(x*0.09)
elif(x>2765.67 and x<=5531.31):
	a=x-(x*0.11)
else:
	a=x-608.44
#Salário base - aliquota
if(a<=1903.98):
	b=a
elif(a>1903.98 and a<=2826.65):
	b=a-(a*0.075)
elif(a>2826.66 and a<=3751.05):
	b=a-(a*0.15)
elif(a>3751.06 and a<=4662.68):
	b=a-(a*0.225)
else:
	b=a-(a*0.275)
print("Salario liquido= R$",(round(b,2)))
-- OUTPUT:
Salario liquido= R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:30:43) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	a=x-(x*0.08)
elif(x>1659.39 and x<=2765.66):
	a=x-(x*0.09)
elif(x>2765.67 and x<=5531.31):
	a=x-(x*0.11)
else:
	a=x-608.44
#Salário base - aliquota
if(a<=1903.98):
	b=a
elif(a>1903.98 and a<=2826.65):
	b=a-(a*0.075)
elif(a>2826.66 and a<=3751.05):
	b=a-(a*0.15)
elif(a>3751.06 and a<=4662.68):
	b=a-(a*0.225)
else:
	b=a-(a*0.275)
print("Salario liquido= R$",(round(b,2)))
-- OUTPUT:
Salario liquido= R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:30:51) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	a=x-(x*0.08)
elif(x>1659.39 and x<=2765.66):
	a=x-(x*0.09)
elif(x>2765.67 and x<=5531.31):
	a=x-(x*0.11)
else:
	a=x-608.44
#Salário base - aliquota
if(a<=1903.98):
	b=a
elif(a>1903.98 and a<=2826.65):
	b=a-(a*0.075)
elif(a>2826.66 and a<=3751.05):
	b=a-(a*0.15)
elif(a>3751.06 and a<=4662.68):
	b=a-(a*0.225)
else:
	b=a-(a*0.275)
print("Salario liquido= R$",(round(b,2)))
-- OUTPUT:
Salario liquido= R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:30:56) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	a=x-(x*0.08)
elif(x>1659.39 and x<=2765.66):
	a=x-(x*0.09)
elif(x>2765.67 and x<=5531.31):
	a=x-(x*0.11)
else:
	a=x-608.44
#Salário base - aliquota
if(a<=1903.98):
	b=a
elif(a>1903.98 and a<=2826.65):
	b=a-(a*0.075)
elif(a>2826.66 and a<=3751.05):
	b=a-(a*0.15)
elif(a>3751.06 and a<=4662.68):
	b=a-(a*0.225)
else:
	b=a-(a*0.275)
print("Salario liquido= R$",(round(b,2)))
-- OUTPUT:
Salario liquido= R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:31:02) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	a=x-(x*0.08)
elif(x>1659.39 and x<=2765.66):
	a=x-(x*0.09)
elif(x>2765.67 and x<=5531.31):
	a=x-(x*0.11)
else:
	a=x-608.44
#Salário base - aliquota
if(a<=1903.98):
	b=a
elif(a>1903.98 and a<=2826.65):
	b=a-(a*0.075)
elif(a>2826.66 and a<=3751.05):
	b=a-(a*0.15)
elif(a>3751.06 and a<=4662.68):
	b=a-(a*0.225)
else:
	b=a-(a*0.275)
print("Salario liquido= R$",(round(b,2)))
-- OUTPUT:
Salario liquido= R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:31:06) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	a=x-(x*0.08)
elif(x>1659.39 and x<=2765.66):
	a=x-(x*0.09)
elif(x>2765.67 and x<=5531.31):
	a=x-(x*0.11)
else:
	a=x-608.44
#Salário base - aliquota
if(a<=1903.98):
	b=a
elif(a>1903.98 and a<=2826.65):
	b=a-(a*0.075)
elif(a>2826.66 and a<=3751.05):
	b=a-(a*0.15)
elif(a>3751.06 and a<=4662.68):
	b=a-(a*0.225)
else:
	b=a-(a*0.275)
print("Salario liquido= R$",(round(b,2)))
-- OUTPUT:
Salario liquido= R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:33:26) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x>0 and x<=1659.38):
	a=x-(x*0.08)
elif(x>1659.39 and x<=2765.66):
	a=x-(x*0.09)
elif(x>2765.67 and x<=5531.31):
	a=x-(x*0.11)
elif(x>5531.31):
	a=x-608.44
else:
	a=0
#Salário base - aliquota
if(a<=1903.98):
	b=a
elif(a>1903.98 and a<=2826.65):
	b=a-(a*0.075)
elif(a>2826.66 and a<=3751.05):
	b=a-(a*0.15)
elif(a>3751.06 and a<=4662.68):
	b=a-(a*0.225)
else:
	b=a-(a*0.275)
print("Salario liquido= R$",(round(b,2)))
-- OUTPUT:
Salario liquido= R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 14:33:33) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x>0 and x<=1659.38):
	a=x-(x*0.08)
elif(x>1659.39 and x<=2765.66):
	a=x-(x*0.09)
elif(x>2765.67 and x<=5531.31):
	a=x-(x*0.11)
elif(x>5531.31):
	a=x-608.44
else:
	a=0
#Salário base - aliquota
if(a<=1903.98):
	b=a
elif(a>1903.98 and a<=2826.65):
	b=a-(a*0.075)
elif(a>2826.66 and a<=3751.05):
	b=a-(a*0.15)
elif(a>3751.06 and a<=4662.68):
	b=a-(a*0.225)
else:
	b=a-(a*0.275)
print("Salario liquido= R$",(round(b,2)))
-- EXECUTION TIME:
0.125075
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido= R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido= R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido= R$ 3571.76
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:35:28) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x>0 and x<=1659.38):
	a=x-(x*0.08)
elif(x>1659.39 and x<=2765.66):
	a=x-(x*0.09)
elif(x>2765.67 and x<=5531.31):
	a=x-(x*0.11)
elif(x>5531.31):
	a=x-608.44
else:
	a=0
#Salário base - aliquota
if(a>0 and a<=1903.98):
	b=a
elif(a>1903.98 and a<=2826.65):
	b=a-(a*0.075)
elif(a>2826.66 and a<=3751.05):
	b=a-(a*0.15)
elif(a>3751.06 and a<=4662.68):
	b=a-(a*0.225)
else:
	b=a-(a*0.275)
print("Salario liquido= R$",(round(b,2)))
-- OUTPUT:
Salario liquido= R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 14:35:36) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x>0 and x<=1659.38):
	a=x-(x*0.08)
elif(x>1659.39 and x<=2765.66):
	a=x-(x*0.09)
elif(x>2765.67 and x<=5531.31):
	a=x-(x*0.11)
elif(x>5531.31):
	a=x-608.44
else:
	a=0
#Salário base - aliquota
if(a>0 and a<=1903.98):
	b=a
elif(a>1903.98 and a<=2826.65):
	b=a-(a*0.075)
elif(a>2826.66 and a<=3751.05):
	b=a-(a*0.15)
elif(a>3751.06 and a<=4662.68):
	b=a-(a*0.225)
else:
	b=a-(a*0.275)
print("Salario liquido= R$",(round(b,2)))
-- EXECUTION TIME:
0.143557
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido= R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido= R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido= R$ 3571.76
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 14:35:39) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x>0 and x<=1659.38):
	a=x-(x*0.08)
elif(x>1659.39 and x<=2765.66):
	a=x-(x*0.09)
elif(x>2765.67 and x<=5531.31):
	a=x-(x*0.11)
elif(x>5531.31):
	a=x-608.44
else:
	a=0
#Salário base - aliquota
if(a>0 and a<=1903.98):
	b=a
elif(a>1903.98 and a<=2826.65):
	b=a-(a*0.075)
elif(a>2826.66 and a<=3751.05):
	b=a-(a*0.15)
elif(a>3751.06 and a<=4662.68):
	b=a-(a*0.225)
else:
	b=a-(a*0.275)
print("Salario liquido= R$",(round(b,2)))
-- OUTPUT:
Salario liquido= R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:49:52) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$"h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido:R$",h)
	else:
		y=h-(h*0.75)
		print("Salario liquido:R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*11/100)
	if(h<=2826.65):
		y=h-(h*7.5/100)
		print("Salario liquido:R$",y)
-- ERROR:
File "XXXX", line 5
    print("Salario liquido=R$"h)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:50:02) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido:R$",h)
	else:
		y=h-(h*0.75)
		print("Salario liquido:R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*11/100)
	if(h<=2826.65):
		y=h-(h*7.5/100)
		print("Salario liquido:R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:50:05) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido:R$",h)
	else:
		y=h-(h*0.75)
		print("Salario liquido:R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*11/100)
	if(h<=2826.65):
		y=h-(h*7.5/100)
		print("Salario liquido:R$",y)
-- EXECUTION TIME:
0.222515
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido=R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido:R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:50:05) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido:R$",h)
	else:
		y=h-(h*0.75)
		print("Salario liquido:R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*11/100)
	if(h<=2826.65):
		y=h-(h*7.5/100)
		print("Salario liquido:R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:00:43) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido:R$",round(h,2))
	else:
		y=round((h-(h*0.75)),2)
		print("Salario liquido:R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*11/100)
	if(h<=2826.65):
		y=round((h-(h*7.5/100)),2)
		print("Salario liquido:R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*15/100)),2)
		print("Salario liquido:R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*22.5/100)),2)
		print("Salario liquido:R$",y)
	else:
		y=round((h-(h*27.5/100)),2)
		print("Salario liquido:R$",y)
else:
	h=x-608.44
	y=round((h-(h*27.5/100)),2)
	print("Salario liquido:R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:00:44) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido:R$",round(h,2))
	else:
		y=round((h-(h*0.75)),2)
		print("Salario liquido:R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*11/100)
	if(h<=2826.65):
		y=round((h-(h*7.5/100)),2)
		print("Salario liquido:R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*15/100)),2)
		print("Salario liquido:R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*22.5/100)),2)
		print("Salario liquido:R$",y)
	else:
		y=round((h-(h*27.5/100)),2)
		print("Salario liquido:R$",y)
else:
	h=x-608.44
	y=round((h-(h*27.5/100)),2)
	print("Salario liquido:R$",y)
-- EXECUTION TIME:
0.137984
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido=R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido:R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido:R$ 3571.76
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:00:45) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido:R$",round(h,2))
	else:
		y=round((h-(h*0.75)),2)
		print("Salario liquido:R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*11/100)
	if(h<=2826.65):
		y=round((h-(h*7.5/100)),2)
		print("Salario liquido:R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*15/100)),2)
		print("Salario liquido:R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*22.5/100)),2)
		print("Salario liquido:R$",y)
	else:
		y=round((h-(h*27.5/100)),2)
		print("Salario liquido:R$",y)
else:
	h=x-608.44
	y=round((h-(h*27.5/100)),2)
	print("Salario liquido:R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:00:50) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido:R$",round(h,2))
	else:
		y=round((h-(h*0.75)),2)
		print("Salario liquido:R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*11/100)
	if(h<=2826.65):
		y=round((h-(h*7.5/100)),2)
		print("Salario liquido:R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*15/100)),2)
		print("Salario liquido:R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*22.5/100)),2)
		print("Salario liquido:R$",y)
	else:
		y=round((h-(h*27.5/100)),2)
		print("Salario liquido:R$",y)
else:
	h=x-608.44
	y=round((h-(h*27.5/100)),2)
	print("Salario liquido:R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:01:18) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.75)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*11/100)
	if(h<=2826.65):
		y=round((h-(h*7.5/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*15/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*22.5/100)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*27.5/100)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*27.5/100)),2)
	print("Salario liquido=R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:01:20) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.75)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*11/100)
	if(h<=2826.65):
		y=round((h-(h*7.5/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*15/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*22.5/100)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*27.5/100)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*27.5/100)),2)
	print("Salario liquido=R$",y)
-- EXECUTION TIME:
0.115193
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido=R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido=R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido=R$ 3571.76
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:06:51) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.75)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*11/100)
	if(h<=2826.65):
		y=round((h-(h*7.5/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*15/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*22.5/100)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*27.5/100)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*27.5/100)),2)
	print("Salario liquido=R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:07:28) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.75)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*11/100)
	if(h<=2826.65):
		y=round((h-(h*7.5/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*15/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*22.5/100)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*27.5/100)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*27.5/100)),2)
	print("Salario liquido=R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:07:45) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.75)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*11/100)
	if(h<=2826.65):
		y=round((h-(h*7.5/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*15/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*22.5/100)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*27.5/100)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*27.5/100)),2)
	print("Salario liquido=R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:12:30) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.75)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*11/100)
	if(h<=2826.65):
		y=round((h-(h*7.5/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*15/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*22.5/100)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*27.5/100)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*27.5/100)),2)
	print("Salario liquido=R$",y)
-- EXECUTION TIME:
0.189428
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido=R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido=R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido=R$ 3571.76
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:12:31) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.75)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*11/100)
	if(h<=2826.65):
		y=round((h-(h*7.5/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*15/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*22.5/100)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*27.5/100)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*27.5/100)),2)
	print("Salario liquido=R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:13:51) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*11/100)
	if(h<=2826.65):
		y=round((h-(h*7.5/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*15/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*22.5/100)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*27.5/100)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*27.5/100)),2)
	print("Salario liquido=R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:14:04) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*11/100)
	if(h<=2826.65):
		y=round((h-(h*7.5/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*15/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*22.5/100)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*27.5/100)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*27.5/100)),2)
	print("Salario liquido=R$",y)
-- EXECUTION TIME:
0.145608
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido=R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido=R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido=R$ 3571.76
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:14:05) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*11/100)
	if(h<=2826.65):
		y=round((h-(h*7.5/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*15/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*22.5/100)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*27.5/100)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*27.5/100)),2)
	print("Salario liquido=R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:14:17) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*11/100)
	if(h<=2826.65):
		y=round((h-(h*7.5/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*15/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*22.5/100)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*27.5/100)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*27.5/100)),2)
	print("Salario liquido=R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:14:25) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*11/100)
	if(h<=2826.65):
		y=round((h-(h*7.5/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*15/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*22.5/100)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*27.5/100)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*27.5/100)),2)
	print("Salario liquido=R$",y)
-- EXECUTION TIME:
0.178372
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido=R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido=R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido=R$ 3571.76
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:14:25) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*11/100)
	if(h<=2826.65):
		y=round((h-(h*7.5/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*15/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*22.5/100)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*27.5/100)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*27.5/100)),2)
	print("Salario liquido=R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:14:41) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*11/100)
	if(h<=2826.65):
		y=round((h-(h*7.5/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*15/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*22.5/100)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*27.5/100)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*27.5/100)),2)
	print("Salario liquido=R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:14:48) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*11/100)
	if(h<=2826.65):
		y=round((h-(h*7.5/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*15/100)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*22.5/100)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*27.5/100)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*27.5/100)),2)
	print("Salario liquido=R$",y)
-- EXECUTION TIME:
0.200863
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido=R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido=R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido=R$ 3571.76
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:20:40) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*0.11)
	if(h<=2826.65):
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*0.15)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*0.225)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*0.275)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*0.275)),2)
	print("Salario liquido=R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:20:42) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*0.11)
	if(h<=2826.65):
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*0.15)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*0.225)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*0.275)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*0.275)),2)
	print("Salario liquido=R$",y)
-- EXECUTION TIME:
0.202143
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido=R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido=R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido=R$ 3571.76
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:20:43) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*0.11)
	if(h<=2826.65):
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*0.15)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*0.225)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*0.275)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*0.275)),2)
	print("Salario liquido=R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:21:10) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*0.11)
	if(h<=2826.65):
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*0.15)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*0.225)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*0.275)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*0.275)),2)
	print("Salario liquido=R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:21:21) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*0.11)
	if(h<=2826.65):
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*0.15)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*0.225)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*0.275)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*0.275)),2)
	print("Salario liquido=R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:22:06) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*0.11)
	if(h<=2826.65):
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*0.15)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*0.225)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*0.275)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*0.275)),2)
	print("Salario liquido=R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:23:15) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*0.11)
	if(h<=2826.65):
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*0.15)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*0.225)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*0.275)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*0.275)),2)
	print("Salario liquido=R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:26:15) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*0.11)
	if(h<=2826.65 and h>=1903.99):
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*0.15)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*0.225)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*0.275)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*0.275)),2)
	print("Salario liquido=R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:26:16) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*0.11)
	if(h<=2826.65 and h>=1903.99):
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*0.15)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*0.225)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*0.275)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*0.275)),2)
	print("Salario liquido=R$",y)
-- EXECUTION TIME:
0.162065
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido=R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido=R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido=R$ 3571.76
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:26:17) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*0.11)
	if(h<=2826.65 and h>=1903.99):
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*0.15)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*0.225)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*0.275)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*0.275)),2)
	print("Salario liquido=R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:27:34) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*0.11)
	if(x<=1903.98):
		print("Salario liquido=R$",h)
	elif(h<=2826.65 and h>=1903.99):
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*0.15)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*0.225)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*0.275)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*0.275)),2)
	print("Salario liquido=R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:27:35) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*0.11)
	if(x<=1903.98):
		print("Salario liquido=R$",h)
	elif(h<=2826.65 and h>=1903.99):
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*0.15)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*0.225)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*0.275)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*0.275)),2)
	print("Salario liquido=R$",y)
-- EXECUTION TIME:
0.141465
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido=R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido=R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido=R$ 3571.76
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:27:54) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*0.11)
	if(x<=1903.98):
		print("Salario liquido=R$",h)
	elif(h<=2826.65 and h>=1903.99):
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*0.15)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*0.225)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*0.275)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*0.275)),2)
	print("Salario liquido=R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:27:59) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*0.11)
	if(x<=1903.98):
		print("Salario liquido=R$",h)
	elif(h<=2826.65 and h>=1903.99):
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*0.15)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*0.225)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*0.275)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*0.275)),2)
	print("Salario liquido=R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:28:56) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*8/100)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*9/100)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*0.11)
	if(x<=1903.98):
		print("Salario liquido=R$",h)
	elif(h<=2826.65 and h>=1903.99):
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*0.15)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*0.225)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*0.275)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*0.275)),2)
	print("Salario liquido=R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:31:19) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*0.08)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*0.09)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*0.11)
	if(x<=1903.98):
		print("Salario liquido=R$",h)
	elif(h<=2826.65 and h>=1903.99):
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*0.15)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*0.225)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*0.275)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*0.275)),2)
	print("Salario liquido=R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:31:21) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*0.08)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*0.09)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",round(h,2))
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*0.11)
	if(x<=1903.98):
		print("Salario liquido=R$",h)
	elif(h<=2826.65 and h>=1903.99):
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*0.15)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*0.225)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*0.275)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*0.275)),2)
	print("Salario liquido=R$",y)
-- EXECUTION TIME:
0.149724
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido=R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido=R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido=R$ 3571.76
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:31:42) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*0.08)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*0.09)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",h)
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*0.11)
	if(x<=1903.98):
		print("Salario liquido=R$",h)
	elif(h<=2826.65 and h>=1903.99):
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*0.15)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*0.225)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*0.275)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*0.275)),2)
	print("Salario liquido=R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:31:44) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*0.08)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*0.09)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",h)
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*0.11)
	if(x<=1903.98):
		print("Salario liquido=R$",h)
	elif(h<=2826.65 and h>=1903.99):
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*0.15)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*0.225)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*0.275)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*0.275)),2)
	print("Salario liquido=R$",y)
-- EXECUTION TIME:
0.183824
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido=R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido=R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido=R$ 3571.76
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-06 12:41:58) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*0.08)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*0.09)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",h)
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*0.11)
	if(x<=1903.98):
		print("Salario liquido=R$",h)
	elif(h<=2826.65 and h>=1903.99):
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*0.15)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*0.225)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*0.275)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*0.275)),2)
	print("Salario liquido=R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-06 12:42:00) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*0.08)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*0.09)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",h)
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*0.11)
	if(x<=1903.98):
		print("Salario liquido=R$",h)
	elif(h<=2826.65 and h>=1903.99):
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*0.15)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*0.225)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*0.275)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*0.275)),2)
	print("Salario liquido=R$",y)
-- EXECUTION TIME:
0.185447
-- TEST CASE 1:
---- input:
1234.56
---- correct output:
Salario liquido = R$  1135.8
---- user output:
Salario liquido=R$ 1135.8
-- TEST CASE 2:
---- input:
2000
---- correct output:
Salario liquido = R$  1820.0
---- user output:
Salario liquido=R$ 1820.0
-- TEST CASE 3:
---- input:
5535
---- correct output:
Salario liquido = R$  3571.76
---- user output:
Salario liquido=R$ 3571.76
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-06 12:42:00) 
-- CODE:
x=float(input("salario:"))
#Salário bruto menos alíquota
if(x<=1659.38):
	h=round((x-(x*0.08)),2)
	print("Salario liquido=R$",h)
elif(x>=1659.39)and(x<=2765.66):
	h=round((x-(x*0.09)),2)
	if(h<=1903.98):
		print("Salario liquido=R$",h)
	else:
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
elif(x>=2765.67)and(x<=5531.31):
	h=x-(x*0.11)
	if(x<=1903.98):
		print("Salario liquido=R$",h)
	elif(h<=2826.65 and h>=1903.99):
		y=round((h-(h*0.075)),2)
		print("Salario liquido=R$",y)
	elif(h>=2826.66)and(h<=3751.05):
		y=round((h-(h*0.15)),2)
		print("Salario liquido=R$",y)
	elif(h>=3751.06)and(h<=4664.68):
		y=round((h-(h*0.225)),2)
		print("Salario liquido=R$",y)
	else:
		y=round((h-(h*0.275)),2)
		print("Salario liquido=R$",y)
else:
	h=x-608.44
	y=round((h-(h*0.275)),2)
	print("Salario liquido=R$",y)
-- OUTPUT:
Salario liquido=R$ 1135.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
